<resources>
    <string name="app_name">Rimador</string>
    <string name="ej_salida">Ej: salida</string>
    <string name="ej_sa_li_da">Ej: sa-li-da</string>
    <string name="ingresar_palabra">Ingresar palabra</string>
    <string name="palabra_separada_en_s_labas">Palabra separada en sílabas</string>
    <string name="separar_en_s_labas">Separar en sílabas</string>
    <string name="ri_ma_dor">ri-ma-dor</string>
    <string name="rimador">Rimador</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ver_estructura_vocal">ver estructura vocal</string>
    <string name="separada_en_silabas">Separada en silabas:</string>
    <string name="estructura_vocal">Estructura vocal:</string>
    <string name="limpiar">Limpiar</string>
    <string name="empty_string" />
    <string name="ver_rima_asonante">Ver rima asonante</string>
    <string name="ver_rima_consonante">Ver rima consonante</string>
    <string name="rima_asonante">Rima asonante:</string>
    <string name="rima_consonante">Rima consonante:</string>
    <string name="buscar_rima_consonante">Buscar rima consonante</string>
    <string name="buscar_rima_asonante">Buscar rima asonante</string>
    <string name="coincidence"> coincidencias</string>
    <string name="e">E</string>
    <string name="configuracion_avanzada">Configuracion avanzada</string>
    <string name="cantidad_de_silabas">Cantidad de silabas</string>
    <string name="sin_tilde">Sin tilde</string>
    <string name="crear_palabras">Crear palabras</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="m_nimo">Mínimo</string>
    <string name="m_ximo">Máximo</string>
    <string name="n_mero_de_silabas">Número de silabas</string>
    <string name="generar_palabras">Generar palabras</string>
    <string name="ortografia">Ortografia</string>
    <string name="usar_w_como_u">Usar W como U</string>
    <string name="usar_y_como_i">Usar Y como I</string>
    <string name="agregar_ph_sh_ck_como_f_ll_k">agregar ph,sh,ck como F,LL,K,</string>
    <string name="silaba_entera_por_letra_asesino_acsino"><![CDATA[silaba entera por letra: asesino -> acsino]]></string>
    <string name="expandir_uso_de_la_q_qs_qz">expandir uso de la Q: qs,qz</string>
    <string name="usar_palabras_mal_escritas">usar palabras mal escritas</string>
    <string name="inventar_palabras">Inventar palabras</string>
    <string name="buscador_de_rimas">Buscador de rimas</string>
    <string name="creador_de_palabras">creador de palabras</string>
    <string name="analizador_de_palabras">Analizador de palabras</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="eliminar_letras">Eliminar letras</string>
</resources>
