<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controladores.SepararPalabraActivity">

    <Button
        android:id="@+id/SepararEnSilabasBoton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="separarEnSilabasClickeado"
        android:text="@string/separar_en_s_labas"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/palabraSeparadaText"
        app:layout_constraintStart_toStartOf="@+id/palabraSeparadaText" />

    <EditText
        android:id="@+id/ingresarPalabraText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ej_salida"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresarPalabraLabel" />

    <TextView
        android:id="@+id/palabraSeparadaText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/ej_sa_li_da"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/ingresarPalabraText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ingresarPalabraText"
        app:layout_constraintTop_toBottomOf="@+id/palabraSeparadaLabel" />

    <TextView
        android:id="@+id/ingresarPalabraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ingresar_palabra"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/ingresarPalabraText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/palabraSeparadaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/palabra_separada_en_s_labas"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/palabraSeparadaText"
        app:layout_constraintTop_toBottomOf="@+id/ingresarPalabraText" />

</android.support.constraint.ConstraintLayout>