<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MainActivity">

    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bienvenido"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLabel">

        <Button
            android:id="@+id/goToGenerateWordsButton"
            style="@style/rimadorButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToGenerateWordsButtonClicked"
            android:text="@string/creador_de_palabras" />

        <Button
            android:id="@+id/goToSearchRhymeButton"
            style="@style/rimadorButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="goToSearchRhymeButtonClicked"
            android:text="@string/buscador_de_rimas" />

        <Button
            android:id="@+id/goToWordAnalyzerButton"
            style="@style/rimadorButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="goToWordAnalyzerButtonClicked"
            android:text="@string/analizador_de_palabras" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>